--- a/src/account/account.css
+++ b/src/account/account.css
@@ -10,6 +10,7 @@ body {
 }
 .error {
     color: red;
+    padding: 0.2em 0 0;
 }
 .login-box {
     border: 1px solid;
@@ -19,7 +20,7 @@ body {
 }
 .login-box__input-bar {
     font-style: italic;
-    margin-top: 1em;
+    margin: 0.8em 0;
     padding-left: 0.5em;
     width: 96%;
 }
