--- a/src/account/account.css
+++ b/src/account/account.css
@@ -1,7 +1,7 @@
 body {
+    font-family: sans-serif;
     margin: 0;
     padding: 0;
-    font-family: sans-serif;
 }
 .my-account {
     align-items: flex-start;
@@ -14,6 +14,7 @@ body {
 }
 .login-box {
     border: 1px solid;
+    box-sizing: border-box;
     font-size: 14px;
     padding: 1em;
     width: 25%;
@@ -31,6 +32,7 @@ body {
 }
 .create-account-box {
     border: 1px solid;
+    box-sizing: border-box;
     font-size: 14px;
     padding: 1em;
     text-align: left;
